--- a/machine_paraphrased_detector_web/machine_paraphrased_detector/Home/static/css/style.css
+++ b/machine_paraphrased_detector_web/machine_paraphrased_detector/Home/static/css/style.css
@@ -1,4 +1,5 @@
 body{
+    width: 100%;
     background: #DCF2F1;
     margin: 0px;
     padding: 0px;
@@ -9,9 +10,15 @@ h1{
     text-align: center;
 }
 
+html{
+    padding: 0;
+    margin: 0;
+    width: 100%;
+}
 
 
 .container {
+    width: 1000px;
     align-content: center;
     margin: 0px;
     padding: 0px;
