--- a/machine_paraphrased_detector_web/machine_paraphrased_detector/Home/templates/Home/base.html
+++ b/machine_paraphrased_detector_web/machine_paraphrased_detector/Home/templates/Home/base.html
@@ -7,8 +7,8 @@
     {% include "snippets/styles.html" %}
     {% include "snippets/script.html" %}
 </head>
-<body>
-    <div class='container'>
+<body class="w-100">
+    <div class='d-flex flex-column'>
         <div class='header'>
             <h1 class="text-center">Machine Paraphrased Essay Detector</h1>
         </div>
@@ -60,9 +60,8 @@
                 </div>
             </div>
             </div>
-        </div>
-        
-</div>
+        </div>    
+    </div>
 
 
 </body>
