--- a/machine_paraphrased_detector_web/machine_paraphrased_detector/Home/templates/Home/notParaphrased.html
+++ b/machine_paraphrased_detector_web/machine_paraphrased_detector/Home/templates/Home/notParaphrased.html
@@ -3,6 +3,6 @@
 
 {% block isi %}
 <blockquote class="blockquote text-center">
-    <p class="mb-1">Your essay is original</p>
+    <p class="">Your essay is original</p>
 </blockquote>
 {% endblock isi %}
