--- a/machine_paraphrased_detector_web/machine_paraphrased_detector/Home/templates/Home/output.html
+++ b/machine_paraphrased_detector_web/machine_paraphrased_detector/Home/templates/Home/output.html
@@ -1,18 +1,17 @@
 {% load static %}
 <!DOCTYPE html>
-<html lang="en">
+<html class="h-100" lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% include "snippets/outputStyles.html" %}
     {% include "snippets/script.html" %}
 </head>
-<body>
-    <div class='container'>
+<body class="h-100 d-flex align-items-center justify-content-center">
+    <div class='d-flex flex-column'>
         {% block isi %}
 
         {% endblock isi %}
-        <br>
         <div class="output">
             <a href="">
                 <button type="button" class="btn btn-primary">Check another essay</button>
