--- a/machine_paraphrased_detector_web/machine_paraphrased_detector/Home/templates/Home/paraphrased.html
+++ b/machine_paraphrased_detector_web/machine_paraphrased_detector/Home/templates/Home/paraphrased.html
@@ -3,7 +3,7 @@
 
 {% block isi %}
 <blockquote class="blockquote text-center">
-    <p class="mb-1">Your essay is paraphrased by machine</p>
-    <p class="mb-1">Similarity percentage: ...</p>
+    <p class="">Your essay is paraphrased by machine</p>
+    <p class="">Similarity percentage: {{similarity}}</p>
 </blockquote>
 {% endblock isi %}
