--- a/machine_paraphrased_detector_web/machine_paraphrased_detector/Home/static/css/style.css
+++ b/machine_paraphrased_detector_web/machine_paraphrased_detector/Home/static/css/style.css
@@ -58,3 +58,14 @@ button#check_button.btn.btn-primary {
     padding: 5px;
     box-sizing: border-box;
 }
+
+.modal-body{
+    display: flex;
+    flex-direction: row;
+}
+
+#text_loading{
+    margin-left: 20px;
+    margin-top: 2px;
+}
+
