--- a/machine_paraphrased_detector_web/machine_paraphrased_detector/Home/templates/Home/base.html
+++ b/machine_paraphrased_detector_web/machine_paraphrased_detector/Home/templates/Home/base.html
@@ -8,25 +8,28 @@
     {% include "snippets/script.html" %}
 </head>
 <body class="w-100">
+    
     <div class='d-flex flex-column'>
         <div class='header'>
             <h1 class="text-center">Machine Paraphrased Essay Detector</h1>
         </div>
+        <div class="alert alert-warning" id='alert_message' role="alert" hidden=true>
+            Your input is missing letters!
+          </div>
 
         
         <div class="form-container">
-            <form method="post">
+            <form method="post" id="form_div">
                 <div class="d-flex flex-column">
                     {% csrf_token %}
                     <div class="form-container-table">
-                        <table>
-                            {{home_input.as_table}}
-                        </table>
+                        <textarea name="text" class="form-control" id="text_input" rows="10" cols="100" placeholder="Input your essay here" required></textarea>
                     </div>
                     
+                   
                     
                     <div class="form-container-button">
-                        <button id ="check_button" type="submit" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
+                        <button id ="check_button" type="submit" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter" >
                             Check
                         </button> 
                     </div>
@@ -42,25 +45,20 @@
         <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
-                {% comment %} <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-                </div> {% endcomment %}
-                <div class="modal-body">
+                <div class="modal-body" style="display: flex; flex-direction: row;">
                     <div class="spinner-border text-dark" role="status">
                         <span class="sr-only"></span>
+                        
                       </div>
-                      Your essay is being processed...
-                </div>
-               <div class="modal-footer">
-                <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
-                {% comment %} <button type="button" class="btn btn-primary">Save changes</button> {% endcomment %}
+
+                      <p id="text_loading" style="margin-left: 10px; margin-top: 5px;"> Your essay is being processed...</p>
+                      
                 </div>
             </div>
             </div>
         </div>    
+
+          
     </div>
 
 
