--- a/machine_paraphrased_detector_web/machine_paraphrased_detector/Home/templates/Home/paraphrased.html
+++ b/machine_paraphrased_detector_web/machine_paraphrased_detector/Home/templates/Home/paraphrased.html
@@ -5,5 +5,6 @@
 <blockquote class="blockquote text-center">
     <p class="">Your essay is paraphrased by machine</p>
     <p class="">Similarity percentage: {{similarity}}</p>
+    <p class="">With file name: {{file_name}}</p>
 </blockquote>
 {% endblock isi %}
